--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "@material-ui/core": "^4.9.9",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.48",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "connected-react-router": "^6.8.0",
+    "date-fns": "^2.11.1",
     "notistack": "^0.9.9",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
