--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "connected-react-router": "^6.8.0",
     "date-fns": "^2.11.1",
+    "jwt-decode": "^2.2.0",
     "notistack": "^0.9.9",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
